--- a/DUAM/AppSettings.json
+++ b/DUAM/AppSettings.json
@@ -2,7 +2,7 @@
   "Database": {
     "Type": "MSSQL",
     "ConnectionStrings": {
-      "MSSQL": "Data Source=delodb-test;Initial Catalog=TUTOR_DB;Persist Security Info=True;User ID=TUTOR;Password=TUTOR"
+      "MSSQL": "Data Source=irk-sql-03;Initial Catalog=;User ID=;Password="
     }
   }
 }
